fix: account switcher z-index on desktop; enable light mode toggle on mobile

--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -212,6 +212,7 @@
         border-radius: 4px;
         box-shadow: 0 8px 16px 0 var(--shadow-menu) !important;
         position: absolute;
+        z-index: 9999;
         transition:
             transform 0.3s ease,
             opacity 0.25s linear;
